# OpenMP_Mini1_Project

./: .gitignore  AIRQUALITY_FINAL_SUMMARY.md  AIRQUALITY_QUICKSTART.md  AIR_QUALITY_IMPLEMENTATION_PLAN.md  CMakeLists.txt  CODE_REUSABILITY_ANALYSIS.md  EXTENDED_README.md  FINAL_IMPLEMENTATION_PLAN.md  FULL_DATASET_RESULTS.txt  INTERFACE_DESIGN_SUMMARY.md  PARALLEL_FILE_LOADING_PLAN.md  PROGRESS_SUMMARY.md  README.md  README_backup.md  README_old.md
.github/workflows/: ci.yml
data/: sample.txt
data/PopulationData/: population.csv
interface/: airquality_model_column.hpp  airquality_model_row.hpp  airquality_service_column.hpp  airquality_service_interface.hpp  airquality_service_row.hpp  airquality_types.hpp  benchmark_runner.hpp  benchmark_utils.hpp  constants.hpp  datetime_utils.hpp  fireColumnModel.hpp  fireRowModel.hpp  fire_service.hpp  fire_service_direct.hpp  fire_service_interface.hpp  my_interface.h  parallel_csv_loader.hpp  populationModel.hpp  populationModelColumn.hpp  population_model_interface.hpp  population_service_interface.hpp  readcsv.hpp  service.hpp  utils.hpp
results/: file_loading.csv  model_comparison.csv  parallel_scaling.csv  query_performance.csv  scale_impact.csv  summary_statistics.csv
scripts/: generate_bench_assets.py
src/: airquality_model_column.cpp  airquality_model_row.cpp  airquality_service_column.cpp  airquality_service_row.cpp  airquality_types.cpp  benchmark_runner.cpp  benchmark_utils.cpp  fireColumnModel.cpp  fireColumnService.cpp  fireRowModel.cpp  fireRowService.cpp  fireServiceTest.cpp  fire_analytics_test.cpp  fire_column_test.cpp  fire_service_column.cpp  fire_service_row.cpp  fire_test.cpp  main.cpp  main_airquality_full.cpp  main_old.cpp  my_interface.cpp  parallel_csv_loader.cpp  populationModel.cpp  populationModelColumn.cpp  readcsv.cpp  service.cpp  service_column.cpp  synthetic_row_benchmark.cpp  test_parallel_loading.cpp  utils.cpp
tests/: basic_tests.cpp
